feat: добавлен эндпоинт для хилфчека
